--- a/BaiTapBuoi11/index.html
+++ b/BaiTapBuoi11/index.html
@@ -11,7 +11,10 @@
       <div class="layout">
         <div class="box-main">
           <h1>Bắt đầu hành trình</h1>
-          <h2>Học Lập Trình Tại F8</h2>
+          <div class="strong">
+            <strong>Học Lập Trình Tại F8</strong>
+          </div>
+
           <p class="desc-title">
             Từng bước làm chủ lập trình với hệ thống khóa học bài bản, lộ trình
             rõ ràng và nội dung thực chiến bám sát nhu cầu doanh nghiệp. Học từ
@@ -29,8 +32,7 @@
           </div>
 
           <p class="desc-inf">
-            Cùng học với hơn <span>2,500+</span> học viên đang theo lộ trình tại
-            F8
+            Cùng học với hơn <b>2,500+</b> học viên đang theo lộ trình tại F8
           </p>
 
           <div class="btn-color">
