--- a/BaiTapBuoi17/index.html
+++ b/BaiTapBuoi17/index.html
@@ -90,7 +90,7 @@
       </header>
       <!-- end header -->
 
-      <div class="main">
+      <main class="main">
         <!-- start herro - section -->
         <div class="hero-section">
           <!-- start top hero-section -->
@@ -253,7 +253,7 @@
 
         <div class="benefit-section">
           <div class="top-benefit-section row no-gutters">
-            <div class="text-benefit col l-9">
+            <div class="text-benefit col l-9 m-9">
               <p><strong>Benefits</strong></p>
               <p>
                 Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam
@@ -261,7 +261,7 @@
                 Ac cum eget habitasse in velit fringilla feugiat senectus in.
               </p>
             </div>
-            <div class="btn-view col l-3">
+            <div class="btn-view col l-3 m-3">
               <button>View All</button>
             </div>
           </div>
@@ -365,13 +365,13 @@
 
         <div class="our-courses-section">
           <div class="top-courses-section row no-gutters">
-            <div class="text-benefit col l-9">
+            <div class="text-benefit col l-9 m-9">
               <p><strong>Our Courses</strong></p>
               <p>
                 Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
               </p>
             </div>
-            <div class="btn-view col l-3">
+            <div class="btn-view col l-3 m-3">
               <button>View All</button>
             </div>
           </div>
@@ -508,13 +508,13 @@
 
         <div class="testimonials-section">
           <div class="top-courses-section row no-gutters">
-            <div class="text-benefit col l-9">
+            <div class="text-benefit col l-9 m-9">
               <p><strong>Our Testimonials</strong></p>
               <p>
                 Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
               </p>
             </div>
-            <div class="btn-view col l-3">
+            <div class="btn-view col l-3 m-3">
               <button>View All</button>
             </div>
           </div>
@@ -592,13 +592,13 @@
         <!-- start our pricing -->
         <div class="our-pricing">
           <div class="top-courses-section row no-gutters">
-            <div class="text-benefit col l-9">
+            <div class="text-benefit col l-9 m-8">
               <p><strong>Our Pricing</strong></p>
               <p>
                 Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
               </p>
             </div>
-            <div class="btn-pricing btn-view__pricing col l-3">
+            <div class="btn-pricing btn-view__pricing col l-3 m-4">
               <div>
                 <button>Monthly</button>
                 <button>Yearly</button>
@@ -836,6 +836,7 @@
 
         
       </div>
+    </main>
       <!-- end main -->
 
       <!-- start footer -->
@@ -898,7 +899,4 @@
       
     </div>
   </body>
-  <div>
-  
-  </div>
 </html>
