update screen tablet and mobile

--- a/BaiTapBuoi17/index.html
+++ b/BaiTapBuoi17/index.html
@@ -83,9 +83,39 @@
             <div class="nav__btn">
               <button class="nav__btn-item nav__btn--sign-up">Sign Up</button>
               <button class="nav__btn-item nav__btn--login">Login</button>
+              <input type="checkbox" name="btn-bars" id="btn-bars">
+              <label for="btn-bars" class="bars-icon">
+                <i class="fa-solid fa-bars"></i>
+              </label>
+          
+              <label for="btn-bars" class="overlay__label"></label>
+              <div class="menu-bars">
+                <div class="bars-heading">
+                  <div class="bars-heading__img">
+                    <a href="#">
+                      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.08691 27.16L11.1116 19.1353H19.1363V11.1106L27.161 19.1353L19.1363 27.16H3.08691Z" fill="white"/>
+                        <path d="M3.08691 11.1106L11.1116 19.1353V11.1106H19.1363L27.161 3.08594H11.1116L3.08691 11.1106Z" fill="white"/>
+                      </svg>
+                    </a>
+                  </div>
+                  <label for="btn-bars">
+                      <i class="fa-solid fa-x"></i>
+                    </label>
+                </div>
+                <!-- start menu -->
+                 <div class="item-bars">
+                  <a href="#">Home</a>
+                  <a href="#">Courses</a>
+                  <a href="#">About Us</a>
+                  <a href="#">Pricing</a>
+                  <a href="#">Contact</a>
+                 </div>
+              </div>
             </div>
           </div>
           <!-- end btn sign up, sign in -->
+           
         </div>
       </header>
       <!-- end header -->
@@ -253,7 +283,7 @@
 
         <div class="benefit-section">
           <div class="top-benefit-section row no-gutters">
-            <div class="text-benefit col l-9 m-9">
+            <div class="text-benefit col l-9 m-9 c-12">
               <p><strong>Benefits</strong></p>
               <p>
                 Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam
@@ -261,7 +291,7 @@
                 Ac cum eget habitasse in velit fringilla feugiat senectus in.
               </p>
             </div>
-            <div class="btn-view col l-3 m-3">
+            <div class="btn-view col l-3 m-3 c-12">
               <button>View All</button>
             </div>
           </div>
@@ -365,13 +395,13 @@
 
         <div class="our-courses-section">
           <div class="top-courses-section row no-gutters">
-            <div class="text-benefit col l-9 m-9">
+            <div class="text-benefit col l-9 m-9 c-12">
               <p><strong>Our Courses</strong></p>
               <p>
                 Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
               </p>
             </div>
-            <div class="btn-view col l-3 m-3">
+            <div class="btn-view col l-3 m-3 c-12">
               <button>View All</button>
             </div>
           </div>
@@ -508,13 +538,13 @@
 
         <div class="testimonials-section">
           <div class="top-courses-section row no-gutters">
-            <div class="text-benefit col l-9 m-9">
+            <div class="text-benefit col l-9 m-9 c-12">
               <p><strong>Our Testimonials</strong></p>
               <p>
                 Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
               </p>
             </div>
-            <div class="btn-view col l-3 m-3">
+            <div class="btn-view col l-3 m-3 c-12">
               <button>View All</button>
             </div>
           </div>
@@ -592,13 +622,13 @@
         <!-- start our pricing -->
         <div class="our-pricing">
           <div class="top-courses-section row no-gutters">
-            <div class="text-benefit col l-9 m-8">
+            <div class="text-benefit col l-9 m-8 c-12">
               <p><strong>Our Pricing</strong></p>
               <p>
                 Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.
               </p>
             </div>
-            <div class="btn-pricing btn-view__pricing col l-3 m-4">
+            <div class="btn-pricing btn-view__pricing col l-3 m-4 c-12">
               <div>
                 <button>Monthly</button>
                 <button>Yearly</button>
